Add core structure to website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Memory Game</title>
 </head>
 <body>
-    
+    <div>
+        header
+    </div>
+    <div>
+        game area
+    </div>
+
 </body>
 </html>
