Add structure for cards using ul elemnts

--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <title>Memory Game</title>
 </head>
+
 <body>
-    
-    <div>
-        game area
+
+    <div class="wrapper">
+        <ul class="cards">
+            <li class="card">
+                <div class="view front-view">
+                    front image
+                </div>
+                <div class="view back-view">
+                    backend image
+                </div>
+            </li>
+        </ul>
     </div>
 
 </body>
+
 </html>
