Add all cards by coping the code that was written for first card

--- a/index.html
+++ b/index.html
@@ -23,7 +23,126 @@
                     <img src="assets/images/img1.jpg" alt="icon">
                 </div>
             </li>
-           
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img11.jpg" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img2.jpg" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img22.jpg" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img3.png" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img33.png" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img4.png" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img44.png" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img5.png" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img55.png" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img1.jpg" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img11.jpg" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img2.jpg" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img22.jpg" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img3.png" alt="icon">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <span class="material-icons">question_mark</span>
+                </div>
+                <div class="view back-view">
+                    <img src="assets/images/img33.png" alt="icon">
+                </div>
+            </li>
         </ul>
     </div>
 
