--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Google Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+    <link href="assets/css/style.css" rel="stylesheet">
+
+
     <title>Memory Game</title>
 </head>
 
